<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginBottom="75dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="295dp"
            android:layout_height="130dp"
            android:background="@drawable/logocirclebesar" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_hotel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:background="@color/bg_login"
                android:text="@string/btn_hotel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <Button
                android:id="@+id/button_restaurant"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dip"
                android:background="@color/bg_login"
                android:text="@string/btn_resto"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <Button
                android:id="@+id/button_train_map"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dip"
                android:background="@color/bg_login"
                android:text="@string/btn_train_map"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <Button
                android:id="@+id/button_about"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dip"
                android:background="@color/bg_login"
                android:text="@string/btn_about"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <Button
                android:id="@+id/button_profile"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dip"
                android:background="@color/bg_login"
                android:text="@string/btn_profile"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp" />


            <Button
                android:id="@+id/button_logout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dip"
                android:background="@color/bg_login"
                android:text="@string/btn_logout"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>